--- a/etc/config.json
+++ b/etc/config.json
@@ -1,7 +1,8 @@
 {
     "main": {
         "num_cpus": 2,
-        "log_level": 1
+        "log_level": 1,
+        "channel_size": 50000
     },
     "in": {
         "module": "TCPInput",
