Component Stats Impl

--- a/etc/config.json
+++ b/etc/config.json
@@ -14,7 +14,8 @@
     },
     "proc": [
         {
-            "module": "LogProc"
+            "module": "LogProc",
+            "level": "debug"
         }
     ],
     "out": {
