--- a/etc/config.json
+++ b/etc/config.json
@@ -10,7 +10,8 @@
         "listen": "0.0.0.0",
         "port": 9092,
         "headers": ["hello", "test", "src"],
-        "separator": ","
+        "separator": ",",
+        "convert": true
     },
     "proc": [
         {
