--- a/etc/config.json
+++ b/etc/config.json
@@ -5,7 +5,7 @@
         "channel_size": 50000
     },
     "in": {
-        "module": "TCPCSVInput",
+        "module": "TCPRawInput",
         "threads": 2,
         "listen": "0.0.0.0",
         "port": 9092,
