--- a/etc/config-lpm.json
+++ b/etc/config-lpm.json
@@ -13,8 +13,13 @@
     "proc": [
         {
             "module": "LPMProc",
-            "filepath": "~/tmp/prefix-asn.txt",
-            "in_fields": ["src", "dst"]
+            "filepath": "/tmp/prefix-asn.txt",
+            "reload_minutes": 1440,
+            "in_fields": ["src", "dst"],
+            "out_fields": [
+                {"key_suffix": "sky_{{in_field}}_prefix", "value": "prefix"},
+                {"key_suffix": "sky_{{in_field}}_asn", "value": "asn"}
+            ]
         }
     ],
     "out": {
