Drop field working :)

--- a/etc/config-lpm.json
+++ b/etc/config-lpm.json
@@ -16,6 +16,10 @@
             "field_name": "_timestamp"
         },
         {
+            "module": "DropFieldProc",
+            "field_name": "_timestamp"
+        },
+        {
             "module": "LPMProc",
             "filepath": "/tmp/prefix-asn.txt",
             "reload_minutes": 1440,
