--- a/etc/config.json
+++ b/etc/config.json
@@ -30,22 +30,25 @@
             "types": ["int"]
         },
         {
-            "module": "Md5Proc",
-            "in_fields": ["host"],
-            "out_fields": ["host_hash"],
-            "salt": "andPepper!"
-        },
-        {
             "module": "InListProc",
             "in_field": "port",
             "out_field": "port_block",
             "reload_minutes": 100000000,
             "list": ["8080", "443", "10000", "8924"]
         },
-        {
-            "module": "AddTimeProc",
-            "field_name": "_timestamp"
-        },
+        {"module": "if",  "condition": "port_block == true "},
+            {
+                "module": "Md5Proc",
+                "in_fields": ["host"],
+                "out_fields": ["host_hash"],
+                "salt": "andPepper!"
+            },
+        {"module": "else"},
+            {
+                "module": "AddTimeProc",
+                "field_name": "_timestamp"
+            },
+        {"module": "endif"},
         {
             "module": "LogProc",
             "level": "info"
