If/Else support :)

--- a/etc/config.json
+++ b/etc/config.json
@@ -34,7 +34,7 @@
             "in_field": "port",
             "out_field": "port_block",
             "reload_minutes": 100000000,
-            "list": ["8080", "443", "10000", "8924"]
+            "list": ["8080", "443", "23230", "14572", "17018"]
         },
         {"module": "if",  "condition": "port_block == true "},
             {
