--- a/etc/config-lpm.json
+++ b/etc/config-lpm.json
@@ -25,8 +25,8 @@
             "reload_minutes": 1440,
             "in_fields": ["src", "dst"],
             "out_fields": [
-                {"newkey": "sky_{{in_field}}_prefix", "metakey": "prefix"},
-                {"newkey": "sky_{{in_field}}_asn", "metakey": "asn"}
+                {"newkey": "_{{in_field}}_prefix", "metakey": "prefix"},
+                {"newkey": "_{{in_field}}_asn", "metakey": "asn"}
             ]
         },
         {
