--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,14 @@ notifications:
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
 before_script:
+  - MODS=./input ./proc ./output
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
-  - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' ./... | sort | uniq | grep -v golang-samples)
+  - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
   - go get -u -v -d $GO_IMPORTS
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
   - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
-  - go test -v -race ./input ./proc ./output # Run all the tests with the race detector enabled
-  - go vet ./...                             # go vet is the official Go static analyzer
+  - go test -v -cover -coverprofile=c.out $MODS
+  - go vet $MODS                             # go vet is the official Go static analyzer
