--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,6 @@ before_script:
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
+  - test -z "$(gofmt -s -l $GO_FILES)"       # Fail if a .go file hasn't been formatted with gofmt
   - go test -v -cover $MODS
   - go vet $MODS                             # go vet is the official Go static analyzer
