--- a/.travis.yml
+++ b/.travis.yml
@@ -26,14 +26,32 @@ matrix:
 notifications:
   email: false
 
+cache:
+    directories:
+        - /home/travis/gopath/src/github.com/urban-1/gopipe/build
+
+env:
+    PKG_CONFIG_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib/pkgconfig LD_LIBRARY_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib
+
 # Anything in before_script that returns a nonzero exit code will
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
 before_script:
+  - KAFKA_VERSION=v0.11.3
   - MODS="./input ./proc ./output"
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
   - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
   - go get -u -v -d $GO_IMPORTS
+  - ( mkdir -p ./build/src
+      mkdir -p ./build/local
+      cd ./build/src
+      git clone https://github.com/edenhill/librdkafka.git
+      cd librdkafka
+      git checkout $KAFKA_VERSION
+      ./configure --prefix=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local
+      make
+      make install)
+  - cat $PKG_CONFIG_PATH/rdkafka.pc
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
