--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: go
 # are allowed to fail on Go tip.
 go:
   - 1.9
-  - master
+  # - master
 
 # Skip the install step. Don't `go get` dependencies. Only build with the
 # code in vendor/
@@ -37,7 +37,7 @@ env:
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
 before_script:
-  - KAFKA_VERSION=v0.11.3
+  - KAFKA_VERSION=v0.11.0
   - MODS="./input ./proc ./output"
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
   - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
