--- a/.travis.yml
+++ b/.travis.yml
@@ -26,14 +26,11 @@ matrix:
 notifications:
   email: false
 
-env:
-    PKG_CONFIG_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib/pkgconfig LD_LIBRARY_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib
-
 # Anything in before_script that returns a nonzero exit code will
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
 before_script:
-  - KAFKA_VERSION=v0.11.0
+  - KAFKA_VERSION=v0.11.3
   - ( mkdir -p ./build/src;
       mkdir -p ./build/local;
       cd ./build/src;
@@ -42,7 +39,7 @@ before_script:
       git checkout $KAFKA_VERSION;
       ./configure --prefix=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local &&
       make &&
-      make install)
+      sudo make install)
   - MODS="./input ./proc ./output"
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
   - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
