--- a/.travis.yml
+++ b/.travis.yml
@@ -26,25 +26,11 @@ matrix:
 notifications:
   email: false
 
-env:
-    global:
-        - PKG_CONFIG_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib/pkgconfig
-        - LD_LIBRARY_PATH=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local/lib
-
 # Anything in before_script that returns a nonzero exit code will
 # flunk the build and immediately stop. It's sorta like having
 # set -e enabled in bash.
 before_script:
-  - KAFKA_VERSION=v0.11.3
-  - ( mkdir -p ./build/src;
-      mkdir -p ./build/local;
-      cd ./build/src;
-      git clone https://github.com/edenhill/librdkafka.git;
-      cd librdkafka;
-      git checkout $KAFKA_VERSION;
-      ./configure --prefix=/home/travis/gopath/src/github.com/urban-1/gopipe/build/local &&
-      make &&
-      make install)
+  - make rdkafka
   - MODS="./input ./proc ./output"
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
   - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
@@ -54,5 +40,4 @@ before_script:
 # in a modern Go project.
 script:
   - test -z "$(gofmt -s -l $GO_FILES)"       # Fail if a .go file hasn't been formatted with gofmt
-  - go test -v -cover $MODS
-  - go vet $MODS                             # go vet is the official Go static analyzer
+  - make tests
