--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,14 @@ matrix:
 notifications:
   email: false
 
-# Anything in before_script that returns a nonzero exit code will
-# flunk the build and immediately stop. It's sorta like having
-# set -e enabled in bash.
-before_script:
+install:
   - make rdkafka
   - MODS="./input ./proc ./output"
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
-  - GO_IMPORTS=$(go list -f '{{join .Imports "\n"}}{{"\n"}}{{join .TestImports "\n"}}' $MODS | sort | uniq | grep -v gopipe)
-  - go get -u -v -d $GO_IMPORTS
+  # Setup dependency management tool
+  - curl -L -s https://github.com/golang/dep/releases/download/v0.3.1/dep-linux-amd64 -o $GOPATH/bin/dep
+  - chmod +x $GOPATH/bin/dep
+  - $GOPATH/bin/dep ensure
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
